<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="title_settings">Настройки</string>
    <string name="title_media">Медиатека</string>
    <string name="title_search">Поиск</string>
    <string name="black_theame">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="agree_licence">Пользовательское соглашение</string>
    <string name="share_message">Рекомендую курс по Android-разработке в Практикуме: https://practicum.yandex.ru/android/</string>
    <string name="support_email" translatable="false">your_email@example.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="licence_url" translatable="false">https://practicum.yandex.ru/legal/offer/</string>
    <string name="error_connection_text" translatable="false">Загрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="error_nothing_text" translatable="false">Ничего не нашлось</string>
    <string name="error_connection_title" translatable="false">Проблемы со связью</string>
    <string name="reload" translatable="false">Обновить</string>

    <string name="search_title">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="content_desc_back">Назад</string>
    <string name="content_desc_clear">Очистить запрос</string>

    <string name="history_title" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>

    <string name="country" translatable="false">Страна</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="year" translatable="false">Год</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="length" translatable="false">Длительность</string>

    <string name="time" translatable="false">0:00</string>

    <string name="tab_playlists">Плейлисты</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists_placeholder">Вы не создали ни одного плейлиста</string>
    <string name="favorites_placeholder">Ваша медиатека пуста</string>
    <string name="create_playlist_title">Новый плейлист</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="playlist_name_hint">Название</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="add_cover">Добавить обложку</string>
    <string name="content_desc_add_cover">Добавить обложку</string>
    <string name="content_desc_playlist_cover">Обложка плейлиста</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="finish_create_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="finish_create_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="playlist_screen_title">Плейлист</string>
    <string name="content_desc_share">Поделиться</string>
    <string name="content_desc_menu">Меню плейлиста</string>
    <string name="empty_playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_chooser_title">Поделиться плейлистом</string>
    <string name="share_playlist_tracks_count">%1$d треков</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="no_titlecase">Нет</string>
    <string name="yes_titlecase">Да</string>
    <string name="cancel_delete_playlist">Отмена</string>
    <string name="delete_playlist">Удалить</string>
    <string name="playlist_tracks_empty">В этом плейлисте нет треков</string>
    <string name="delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>

    <plurals name="playlist_tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="playlist_minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>
</resources>
