<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.example.playlistmaker.presentation.media.MediaFragment"
        android:label="@string/title_media">
        <action
            android:id="@+id/action_mediaFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment" />
        <action
            android:id="@+id/action_mediaFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_mediaFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.presentation.search.SearchFragment"
        android:label="@string/title_search">
        <action
            android:id="@+id/action_searchFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.presentation.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/audioPlayerFragment"
        android:name="com.example.playlistmaker.presentation.player.AudioPlayerFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_audioPlayerFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
        <argument
            android:name="trackId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.media.create.CreatePlaylistFragment"
        android:label="@string/create_playlist_title">
        <argument
            android:name="editPlaylistId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.playlistmaker.presentation.media.playlist.PlaylistFragment"
        android:label="@string/playlist_screen_title">
        <action
            android:id="@+id/action_playlistFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_playlistFragment_to_audioPlayerFragment"
            app:destination="@id/audioPlayerFragment" />
        <argument
            android:name="playlistId"
            app:argType="long" />
    </fragment>
</navigation>
