<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Main.Theme.PlaylistMaker"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    android:padding="@dimen/icon_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/ys_display_medium"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            app:icon="@drawable/ic_search_vector"
            style="@style/main_button"
            android:text="@string/title_search" />


        <Button
            android:id="@+id/media"
            app:icon="@drawable/ic_music_vector"
            style="@style/main_button"
            android:text="@string/title_media" />
<!--            android:background="@drawable/rounded_button"-->


        <Button
            android:id="@+id/settings"
            app:icon="@drawable/ic_light_mode_24"
            style="@style/main_button"
            android:text="@string/title_settings" />
</LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>